--- a/modules/openapi-generator/src/main/resources/C-libcurl/model-body.mustache
+++ b/modules/openapi-generator/src/main/resources/C-libcurl/model-body.mustache
@@ -344,12 +344,17 @@ cJSON *{{classname}}_convertToJSON({{classname}}_t *{{classname}}) {
     {{/required}}
     {{^required}}
     {{^isEnum}}
-    {{#isString}}
+    {{^isNumeric}}
+    {{^isBoolean}}
     if({{{classname}}}->{{{name}}}) {
-    {{/isString}}
-    {{^isString}}
-    if(1) {     // always send boolean and numbers
-    {{/isString}}
+    {{/isBoolean}}
+    {{/isNumeric}}
+    {{#isNumeric}}
+    if(1) {     // always send numerics
+    {{/isNumeric}}
+    {{#isBoolean}}
+    if(1) {     // always send booleans
+    {{/isBoolean}}
     {{/isEnum}}
     {{#isEnum}}
     if({{{classname}}}->{{{name}}} != {{projectName}}_{{classVarName}}_{{enumName}}_NULL) {
